@@ -1,3 +1,11 @@
+2004-07-28  Alexandre Oliva  <aoliva@redhat.com>
+
+	2003-07-08  Alexandre Oliva  <aoliva@redhat.com>
+	* readelf.c (get_machine_flags <EM_SH)): Handle EF_SH4_NOFPU and
+	EF_SH4A_NOFPU.
+	2003-06-12  Alexandre Oliva  <aoliva@redhat.com>
+	* readelf.c (get_machine_flags <EM_SH>): Print SH ISA name.
+
 2004-07-21  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* objcopy.c (filter_symbols): Use bfd_coff_get_comdat_section
